--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
-openai==1.101.0
-pymupdf==1.26.4
-PyPDF2==3.0.1
-python-dotenv==1.1.0
-tiktoken==0.11.0
-pyyaml==6.0.2
+# Production dependencies
+openai>=1.100.0,<2.0.0
+pymupdf>=1.26.0,<2.0.0
+PyPDF2>=3.0.0,<4.0.0
+python-dotenv>=1.0.0,<2.0.0
+tiktoken>=0.11.0,<1.0.0
+pyyaml>=6.0.0,<7.0.0
+pydantic>=2.0.0
+
+# Development dependencies (optional)
+# Install with: pip install -e ".[dev]"
+# pytest>=7.0.0
+# pytest-asyncio>=0.21.0
+# pytest-cov>=4.0.0
+# pytest-mock>=3.10.0
+# black>=23.0.0
+# ruff>=0.1.0
+# mypy>=1.0.0
