feat: PageIndex GUI 구현
- CustomTkinter 기반 현대적 GUI 애플리케이션 추가
- PDF/Markdown 파일 처리를 위한 시각적 인터페이스
- 실시간 진행률 표시 및 취소 기능
- JSON 결과 뷰어 (탭 인터페이스, 문법 강조, 트리 뷰)
- CLI 기능 100% 호환 유지

주요 변경사항:
- pageindex/gui/ 패키지 구현 (main_window.py, processor.py, json_viewer.py)
- run_pageindex_gui.py 실행 스크립트 추가
- CustomTkinter 의존성 추가 (requirements.txt)
- README.md에 GUI 사용 방법 추가
- CHANGELOG_GUI.md 변경사항 정리

기술적 해결:
- CTkLabelFrame 호환성 문제 해결
- asyncio 이벤트 루프 충돌 해결 (동기/비동기 분리)
- CustomTkinter API 수정 (create_tab→add, set_tab→set)

🗿 MoAI <email@mo.ai.kr>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 # Production dependencies
+# GUI Dependencies
+customtkinter>=5.2.0
+darkdetect>=0.8.0
+
+# Core Dependencies
 openai>=1.100.0,<2.0.0
 pymupdf>=1.26.0,<2.0.0
 PyPDF2>=3.0.0,<4.0.0
